--- a/index.html
+++ b/index.html
@@ -55,18 +55,13 @@
         background-color: #eee !important;
         border: 0 !important;
       }
-      tbody tr:nth-child(4) td tbody tr td:last-child {
-        background-color: #eee !important;
-        border: 0 !important;
-      }
       tbody tr:nth-child(5) td tbody tr td:last-child {
         background-color: #eee !important;
         border: 0 !important;
       }
-      tbody tr:nth-child(7) td tbody tr td:last-child {
+      tbody tr:nth-child(6) td tbody tr td:last-child {
         background-color: #eee !important;
         border: 0 !important;
-        white-space: normal !important;
       }
       tbody tr:nth-child(8) td tbody tr td:last-child {
         background-color: #eee !important;
@@ -114,6 +109,16 @@
         white-space: normal !important;
       }
       tbody tr:nth-child(17) td tbody tr td:last-child {
+        background-color: #eee !important;
+        border: 0 !important;
+        white-space: normal !important;
+      }
+      tbody tr:nth-child(18) td tbody tr td:last-child {
+        background-color: #eee !important;
+        border: 0 !important;
+        white-space: normal !important;
+      }
+      tbody tr:nth-child(19) td tbody tr td:last-child {
         background-color: #eee !important;
         border: 0 !important;
         white-space: normal !important;
@@ -228,6 +233,117 @@
           }
         }
       });
+
+      const NOMES_RACAS = {
+        "Humano": {
+          "Masculino": [
+            'Aseir', 'Bardeid', 'Haseid', 'Khemed', 'Mehmen', 'Sudeiman', 'Zasheir',
+            'Darvin', 'Dorn', 'Evendur', 'Gorstag', 'Grim', 'Helm', 'Malark', 'Morn', 'Randal', 'Stedd',
+            'Bor', 'Fodel', 'Glar', 'Grigor', 'Igan', 'Ivor', 'Kosef', 'Mival', 'Orel', 'Pavel', 'Sergor',
+            'Ander', 'Blath', 'Bran', 'Frath', 'Geth', 'Lander', 'Luth', 'Malcer', 'Stor', 'Taman', 'Urth',
+            'Aoth', 'Bareris', 'Ehput-Ki', 'Kethoth', 'Mumed', 'Ramas', 'So-Kehur', 'Thazar-De', 'Urhur',
+            'Borivik', 'Faurgar', 'Jandar', 'Kanithar', 'Madislak', 'Ralmevik', 'Shaumar', 'Vladislak',
+            'An', 'Chen', 'Chi', 'Fai', 'Jiang', 'Jun', 'Lian', 'Long', 'Meng', 'On', 'Shan', 'Shui', 'Wen',
+            'Anton', 'Diero', 'Marcon', 'Pieron', 'Rimardo', 'Romero', 'Salazar', 'Umbero'
+          ],
+          "Feminino": [
+            'Atala', 'Ceidil', 'Hama', 'Jasmal', 'Meilil', 'Seipora', 'Yasheira', 'Zasheida',
+            'Arveene', 'Esvele', 'Jhessail', 'Kerri', 'Lureene', 'Miri', 'Rowan', 'Shandri', 'Tessele',
+            'Alethra', 'Kara', 'Katernin', 'Mara', 'Natali', 'Olma', 'Tana', 'Zora',
+            'Amafrey', 'Betha', 'Cefrey', 'Kethra', 'Mara', 'Olga', 'Silifrey', 'Westra',
+            'Arizima', 'Chathi', 'Nephis', 'Nulara', 'Murithi', 'Sefris', 'Thola', 'Umara', 'Zolis',
+            'Fyevarra', 'Hulmarra', 'Immith', 'Imzel', 'Navarra', 'Shevarra', 'Tammith', 'Yuldra',
+            'Bai', 'Chao', 'Jia', 'Lei', 'Mei', 'Qiao', 'Shui', 'Tai',
+            'Balama', 'Dona', 'Faila', 'Jalana', 'Luisa', 'Marta', 'Quara', 'Selise', 'Vonda'
+          ],
+          "Sobrenome": [
+            'Basha', 'Dumein', 'Jassan', 'Khalid', 'Mostana', 'Pashar', 'Rein',
+            'Amblecrown', 'Buckman', 'Dundragon', 'Evenwood', 'Greycastle', 'Tallstag',
+            'Bersk', 'Chernin', 'Dotsk', 'Kulenov', 'Marsk', 'Nemetsk', 'Shemov', 'Starag',
+            'Brightwood', 'Helder', 'Hornraven', 'Lackman', 'Stormwind', 'Windrivver',
+            'Ankhalab', 'Anskuld', 'Fezim', 'Hahpet', 'Nathandem', 'Sepret', 'Uuthrakt',
+            'Chergoba', 'Dyernina', 'Iltazyara', 'Murnyethara', 'Stayanoga', 'Ulmokina',
+            'Chien', 'Huang', 'Kao', 'Kung', 'Lao', 'Ling', 'Mei', 'Pin', 'Shin', 'Sum', 'Tan', 'Wan',
+            'Agosto', 'Astorio', 'Calabra', 'Domine', 'Falone', 'Marivaldi', 'Pisacar', 'Ramondo'
+          ]
+        },
+        "Anão": {
+          "Masculino": [
+            'Adrik', 'Alberich', 'Baern', 'Barendd', 'Brottor', 'Bruenor', 'Dain', 'Darrak', 'Delg',
+            'Eberk', 'Einkil', 'Fargrim', 'Flint', 'Gardain', 'Harbek', 'Kildrak', 'Morgran', 'Orsik',
+            'Oskar', 'Rangrim', 'Rurik', 'Taklinn', 'Thoradin', 'Thorin', 'Tordek', 'Traubon', 'Travok',
+            'Ulfgar', 'Veit', 'Vondal'
+          ],
+          "Feminino": [
+            'Amber', 'Artin', 'Audhild', 'Bardryn', 'Dagnal', 'Diesa', 'Eldeth', 'Falkrun', 'Finellen',
+            'Gunnloda', 'Gurdis', 'Helja', 'Hlin', 'Kathra', 'Kristryd', 'Ilde', 'Liftrasa', 'Mardred',
+            'Riswynn', 'Sannl', 'Torbera', 'Torgga', 'Vistra'
+          ],
+          "Sobrenome": [
+            'Balderk', 'Battlehammer', 'Brawnanvil', 'Dankil', 'Fireforge', 'Frostbeard', 'Gorunn', 'Holderhek',
+            'Ironfist', 'Loder', 'Lutgehr', 'Rumnaheim', 'Strakeln', 'Torunn', 'Ungart'
+          ]
+        },
+        "Elfo": {
+          "Masculino": [
+            'Adran', 'Aelar', 'Aramil', 'Arannis', 'Aust', 'Beiro', 'Berrian', 'Carric', 'Enialis', 'Erdan',
+            'Erevan', 'Galinndan', 'Hadarai', 'Heian', 'Himo', 'Immeral', 'Ivellios', 'Laucian', 'Mindartis',
+            'Paelias', 'Peren', 'Quarion', 'Riardon', 'Rolen', 'Soveliss', 'Thamior', 'Tharivol', 'Theren', 'Varis'
+          ],
+          "Feminino": [
+            'Adrie', 'Althaea', 'Anastrianna', 'Andraste', 'Antinua', 'Bethrynna', 'Birel', 'Caelynn', 'Drusilia',
+            'Enna', 'Felosial', 'Ielenia', 'Jelenneth', 'Keyleth', 'Leshanna', 'Lia', 'Meriele', 'Mialee',
+            'Naivara', 'Quelenna', 'Quillathe', 'Sariel', 'Shanairra', 'Shava', 'Silaqui', 'Theirastra', 'Thia',
+            'Vadania', 'Valanthe', 'Xanaphia'
+          ],
+          "Sobrenome": [
+            'Amakir', 'Amastacia', 'Galanodel', 'Holimion', 'Ilphelkiir', 'Liadon', 'Meliamne', 'Nailo', 'Siannodel', 'Xiloscient'
+          ]
+        },
+        "Gnomo": {
+          "Masculino": [
+            'Alston', 'Alvyn', 'Boddynock', 'Brocc', 'Burgell', 'Dimble', 'Eldon', 'Erky', 'Fonkin', 'Frug',
+            'Gerbo', 'Gimble', 'Glim', 'Jebeddo', 'Kellen', 'Namfoodle', 'Orryn', 'Seebo', 'Sindri', 'Warryn',
+            'Wrenn', 'Zook'
+          ],
+          "Feminino": [
+            'Bimpnottin', 'Breena', 'Caramip', 'Carlin', 'Donella', 'Duvamil', 'Ella', 'Ellyjobell', 'Ellywick',
+            'Lilli', 'Loopmottin', 'Lorilla', 'Mardnab', 'Nissa', 'Nyx', 'Oda', 'Orla', 'Roywyn', 'Shamil',
+            'Tana', 'Waywocket', 'Zanna'
+          ],
+          "Sobrenome": [
+            'Beren', 'Daergel', 'Folkor', 'Garrick', 'Nackle', 'Murnig', 'Ningel', 'Raulnor', 'Scheppen', 'Timbers', 'Turen'
+          ]
+        },
+        "Meio-Elfo": {
+          "Masculino": [
+            "Reimben", "Halrach", "Frilarat", "Elilathan", "Franhomin", "Petellan", "Gabnik", "Mallan", "Quonaith", "Teodlamir",
+            "Doruin", "Maugvendor", "Malcurel", "Tybleath", "Uantevar", "Hamlaith", "Chrisindel", "Xavfalen", "Geffyndar", "Farlael"
+          ],
+          "Feminino": [
+            "Gonsaria", "Ameronyn", "Xyrkiasha", "Issalya", "Jessixipha", "Venleth", "Edellanae", "Athshia", "Roserona", "Winlesse",
+            "Gloshee", "Maerdelia", "Mathraine", "Gendue", "Melyaries", "Nanys", "Cobrae", "Isolaerys", "Jesraele", "Merelihn"
+          ],
+          "Sobrenome": [
+            "Leojyre", "Mirarie", "Yeshana", "Luwraek", "Zingella", "Shakalyn", "Pressandoral", "Genleth", "Xyrnelis", "Uriquinal",
+            "Cralynn", "Neriphyra", "Kearona", "Elaven", "Keyro", "Morqen", "Nerinorin", "Ravagella", "Virra", "Dasalor"
+          ]
+        },
+        "Halfling": {
+          "Masculino": [
+            'Alton', 'Ander', 'Cade', 'Corrin', 'Eldon', 'Errich', 'Finnan', 'Garret', 'Lindal', 'Lyle',
+            'Merric', 'Milo', 'Osborn', 'Perrin', 'Reed', 'Roscoe', 'Wellby'
+          ],
+          "Feminino": [
+            'Andry', 'Bree', 'Callie', 'Cora', 'Euphemia', 'Jillian', 'Kithri', 'Lavinia', 'Lidda',
+            'Merla', 'Nedda', 'Paela', 'Portia', 'Seraphina', 'Shaena', 'Trym', 'Vani', 'Verna'
+          ],
+          "Sobrenome": [
+            'Brushgather', 'Goodbarrel', 'Greenbottle', 'High-hill', 'Hilltopple', 'Leagallow',
+            'Tealeaf', 'Thorngage', 'Tosscobble', 'Underbough'
+          ]
+        }
+      };
 
       const RACAS = {
         "Humano": {
@@ -2983,6 +3099,7 @@
 
       function obter_dados_json_personagem(forca, destreza, constituicao, inteligencia, sabedoria, carisma) {
         return {
+          "Nome": '',
           "Raça": '',
           "Classe": '',
           "Tendência": '',
@@ -4304,6 +4421,10 @@
         let generos = [ 'Masculino' , 'Feminino' ];
         let genero = generos[Math.floor(Math.random() * 2)];
         personagem["Dados Básicos"]["Gênero"] = genero;
+
+        let lista_primeiro_nome = NOMES_RACAS[raca][personagem["Dados Básicos"]["Gênero"]];
+        let lista_sobre_nome = NOMES_RACAS[raca]["Sobrenome"];
+        personagem["Nome"] = lista_primeiro_nome[Math.floor(Math.random() * lista_primeiro_nome.length)] + " " + lista_sobre_nome[Math.floor(Math.random() * lista_sobre_nome.length)];
 
         let ajuste_altura = RACAS[raca].altura[genero].maximo - RACAS[raca].altura[genero].minimo;
         let altura = (Math.random() * ajuste_altura) + RACAS[raca].altura[genero].minimo;
